@@ -8,6 +8,7 @@ For users:
 - New: task #10113 : Show list of emailing on clicking on "number of mass emailing received"
 - New: Add default language for third parties and use it when multilang is enabled
        to define default language for document generation.
+- New: Can reopen a closed supplier invoice.
 - Fix: Formant number as wrong for ar_AR language.
 
 For developers:
